Fix blog post navbar (#140)
* fix issue in navbar for blog post
- set hamburguer menu for width less than 992
- overrride bootstrap styles in post.html to use hamburguer menu
- set some styles inside post.html to fix navbar issues only in blog posts

* fix image overlapping in services

--- a/static/core/css/services.css
+++ b/static/core/css/services.css
@@ -11,7 +11,7 @@
 }
 
 .circle-img-left{
-    top: 36%;
+    top: 35%;
 }
 
 .cube-img-right{
@@ -44,7 +44,7 @@
     }
 
     .circle-img-left{
-        top: 35.5%;
+        top: 34%;
     }
 }
 
